# local-llm-consensus-engine

./: .gitignore  DECLARATION.md  RAPPORT.md  README.md
backend/: .env  .env.example  README.md  pyproject.toml  start_dev.sh  test.py
backend/src/: config.py  main.py
backend/src/api/: __init__.py  council_routes.py  health_routes.py  worker_routes.py
backend/src/models/: __init__.py  council.py
backend/src/services/: __init__.py  council.py  ollama_client.py
frontend/: .gitignore  package.json
frontend/src/: routeTree.gen.ts  vite-env.d.ts
frontend/src/components/: ThemeCustomizer.tsx
frontend/src/components/council/: EmptyState.tsx  FinalAnswerCard.tsx  LatencyBarChart.tsx  ModelRadarChart.tsx  ModelSelector.tsx  OpinionCard.tsx  QueryForm.tsx  ReviewCard.tsx  SessionSummary.tsx  StageProgress.tsx  TokenDistributionChart.tsx  TokenUsageStats.tsx  index.ts
frontend/src/components/ui/: calendar.tsx  chart.tsx
frontend/src/context/: SessionContext.tsx
frontend/src/lib/: themes.ts
frontend/src/routes/: __root.tsx  index.tsx  kpis.tsx  responses.tsx
frontend/src/services/: api.ts  council.ts  index.ts
frontend/src/styles/: app.css
frontend/src/types/: council.ts
project/: backend-project.md  frontend-project.md  instructions.md
