[project]
name = "llm-council-backend"
version = "0.1.0"
description = "LLM Council - Distributed Local LLM Consensus Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "psutil>=6.0.0",
]

[project.scripts]
llm-council = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
